<?xml version="1.0"?>

<package format="2">

  <name>kindr</name>
  <version>1.1.2</version>
  <description>
    Kinematics and Dynamics for Robotics
  </description>

  <license>BSD</license>
  <url type="repository">https://github.com/anybotics/kindr</url>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <author>Michael Bloesch</author>
  <author>Remo Diethelm</author>
  <author>Péter Fankhauser</author>
  <author>Paul Furgale</author>
  <author>Christian Gehring</author>
  <author>Hannes Sommer</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <build_export_depend>roscpp</build_export_depend>

</package>
